--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,7 @@ header #logo img {
 	font-size: 18px;		/*文字サイズ*/
 	text-align: center;		/*文字をセンタリング*/
 	letter-spacing: 0.1em;	/*文字間隔を少しだけ広くする指定*/
-	border: 2px solid #374c55;	/*枠線の幅、線種、色*/
+	border: 2px solid #5d97bc;	/*枠線の幅、線種、色 #374c55*/
 	border-radius: 100px;	/*角を丸くする指定。大きめであれば適当で構いません。*/
 	color: #374c55;			/*文字色*/
 }
@@ -196,7 +196,7 @@ list:first-of-type {
 footer {
 	clear: both;
 	text-align: center;
-	background: #374c55;	/*背景色*/
+	background: #212121;	/*背景色 #374c55*/
 	color: #fff;		/*文字色*/
 	font-size: 85%;		/*文字サイズ*/
 }
